--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,7 @@
 	<p>
 	This is the home page for <a href="http://railstutorial.org">Ruby on Rails Tutorial</a> sample app.
 	</p>
+	
+<%= link_to "Sign up now!", '#', :class => "signup_button round" %>
+
+
