--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,6 @@
 	This is the home page for <a href="http://railstutorial.org">Ruby on Rails Tutorial</a> sample app.
 	</p>
 	
-<%= link_to "Sign up now!", '#', :class => "signup_button round" %>
+<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
 
 
