--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -112,3 +112,21 @@ footer {
 footer nav {
   float: none;
 }
+
+/* User Show Page */
+table.profile {
+	width: 100%;
+	margin-bottom: 0;
+}
+
+td.sidebar {
+	width: 30%;
+	padding: 1em;
+	vertical-align: top;
+	background: #ffc;
+}
+
+.profile img.gravatar {
+	border: 1px solid #999;
+	margin-bottom: -15px;
+}
